--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "kollet-io-nodejs",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Node API wrapper for the Kollet Merchant API",
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
